--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
           <li><a href="#why-us" class="scrollto">Why Us</a></li>
           <li class="drop-down"><a href="">Drop Down</a>
             <ul>
-              <li><a href="#">Drop Down 1</a></li>
+              <li><a href="#">Suraj</a></li>
               <li><a href="#">Tongsen</a></li>
               <li><a href="#">Tongsen</a></li>
-              <li><a href="#">Drop Down 4</a></li>
+              <li><a href="#">Hayden</a></li>
               <li><a href="#">Drop Down 5</a></li>
             </ul>
           </li>
