--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="container-fluid">
 
       <div class="logo">
-        <h1><a href="index.html">DR Plans for TLabs</a></h1>
+        <h1><a href="index.html">Sigma Consultants</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -48,14 +48,14 @@
         <ul>
           <li class="active"><a href="#header" class="scrollto">Home</a></li>
           <li><a href="#about" class="scrollto">About Us</a></li>
-          <li><a href="#why-us" class="scrollto">Why Us</a></li>
-          <li class="drop-down"><a href="">Drop Down</a>
+          <li><a href="#why-us" class="scrollto">The Problem</a></li>
+          <li class="drop-down"><a href="">The Solutions</a>
             <ul>
-              <li><a href="#">Suraj</a></li>
-              <li><a href="#">Tongsen</a></li>
-              <li><a href="#">Tongsen</a></li>
-              <li><a href="#">Hayden</a></li>
-              <li><a href="#">Drop Down 5</a></li>
+              <li><a href="#">Hyper-V Backups and Replication</a></li>
+              <li><a href="#">Tongsen</a>vSphere Replication</li>
+              <li><a href="#">Tongsen</a>Cisco Backups</li>
+              <li><a href="#">Hayden</a>Physical Machine Backups</li>
+              <li><a href="#">IDS/IPS</a></li>
             </ul>
           </li>
           <li><a href="#contact" class="scrollto">Contact Us</a></li>
