--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
           <li class="drop-down"><a href="">The Solutions</a>
             <ul>
               <li><a href="#">Hyper-V Backups and Replication</a></li>
-              <li><a href="#">Tongsen</a>vSphere Replication</li>
-              <li><a href="#">Tongsen</a>Cisco Backups</li>
-              <li><a href="#">Hayden</a>Physical Machine Backups</li>
+              <li><a href="#">vSphere Replication</a></li>
+              <li><a href="#">Cisco Backups</a></li>
+              <li><a href="#">Physical Machine Backups</a></li>
               <li><a href="#">IDS/IPS</a></li>
             </ul>
           </li>
